2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (main): Use PACKAGE_STRING for --version.

2004-11-20  Benno Schulenberg  <benno@nietvergeten.nl>  (tiny change)

	* src/grep.c (reset): Move the stat check ...
	(grepfile): ... here, and also check for a fifo.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	This change is based on a suggestion by Elliott Hughes.

	* src/grep.c (usage): Use PACKAGE_BUGREPORT.
	* po/*.po: Hacked the current translation again.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	* configure.in: Added a copyright notice (using gawk as a template).
	(AC_INIT, AM_INIT_AUTOMAKE): Changed to the ``new'' form so that
	  the PACKAGE_* symbols get defined correctly in config.h.

2004-11-20  Stepan Kasal  <kasal@ucw.cz>

	* ./cvsignore: Amended several .cvsignore files and
	  removed *.gmo, acinclude.m4 and stamp-h.in from the root one.
	* m4/init.m4: Nuked, it was breaking current automake.
	* m4/Makefile.m4: Removed init.m4.
	* autogen.m4: Drop support for legacy autoconf; tell whether the
	  auto tools exited successfully or not; fix the permissions of
	  tests/*.sh--CVS doesn't provide a way to fix it.

2004-11-19  Stepan Kasal  <kasal@ucw.cz>

	* src/dfa.c: Removed old version of gofast patch, from 2003-05-30.
	* src/search.c (check_multibyte_string): Likewise.

2004-11-19  Stepan Kasal  <kasal@ucw.cz>

	* src/dfa.c: Added some simple changes from gawk.
	* src/mbsupport.h: Imported from gawk.

2004-11-11  Stepan Kasal  <kasal@ucw.cz>

	* tests/spencer1.awk: Use only lines with 3 fields.
	* tests/spencer1.tests: Disable #55 for now.
	* tests/ere.tests, tests/bre.tests: Add "TO CORRECT" to disabled
	  tests which had empty $4.
	* tests/backref.sh: Modify #2 so that current glibc regex can
	  handle it in finite time.

2004-11-12  Stepan Kasal  <kasal@ucw.cz>

	Change bug-gnu-utils address to bug-grep, on many places; there
	is no need to have the word ``grep'' in subject then.
	Thanks to Tony Abou-Assaleh and Benno Schulenberg for pointing